@@ -32,12 +32,13 @@ def is_mdname(name):
     return False
 
 def handle(name,cfg,cloud,log,args):
-    # these are our default set of mounts
-    defmnts = [ [ "ephemeral0", "/mnt", "auto", "defaults,nobootwait", "0", "2" ],
-                [ "swap", "none", "swap", "sw", "0", "0" ] ]
-
     # fs_spec, fs_file, fs_vfstype, fs_mntops, fs-freq, fs_passno
     defvals = [ None, None, "auto", "defaults,nobootwait", "0", "2" ]
+    defvals = cfg.get("mount_default_fields", defvals)
+
+    # these are our default set of mounts
+    defmnts = [ [ "ephemeral0", "/mnt", "auto", defvals[3], "0", "2" ],
+                [ "swap", "none", "swap", "sw", "0", "0" ] ]
 
     cfgmnt = [ ]
     if cfg.has_key("mounts"):
